addons/better-featured-project/userstyle.css
.box#profile-data .box-head {
  padding-top: 250px;
  padding-bottom: 20px;
  text-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
  border: none;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  padding-left: 20px;
  padding-right: 20px;
}
#profile-data .box-head::before {
  /* The background is a pseudo-element so filters can be applied to it
  without affecting the text. */
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.5)), var(--featured-thumb);
  background-size: cover;
  background-position: center;
  filter: blur(calc(1px * var(--betterFeaturedProject-blur)));
}
#profile-data .box-head .header-text {
  position: relative;
  z-index: 1;
}
#profile-data .box-head h2,
#profile-data .box-head h3 {
  color: white;
}
#profile-data .box-head .profile-details {
  color: white;
}
#profile-data .box-head .profile-details .group {
  border-right-color: white;
}
#profile-data .box-head .profile-details .location {
  display: block !important;
}
#profile-data .box-head .portrait img {
  border: none;
}
#profile-data .box-head .buttons {
  top: auto !important;
  bottom: 26px !important;
  right: 20px !important;
  z-index: 1;
}
#better-featured-project-name {
  color: white;
  position: absolute;
  top: 30px;
  left: 30px;
}
#better-featured-project-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
#profile-data .box-head .avatar [data-control="edit"] {
  width: 100% !important;
  height: calc(100% - 16px) !important;
  padding: 0;
  padding-top: 16px;
  margin: 0;
  text-align: center;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 0;
}
#profile-data .box-head .avatar [data-control="edit"] input.hidden {
  width: 100%;
  height: 100%;
}
#profile-data .box-head .avatar img {
  background-color: transparent;
}
#profile-box .user-content {
  position: static;
  width: 661px;
}
#profile-box .player {
  position: static;
  background: transparent;
  box-shadow: none;
  border: none;
}
.user-content .player .stage #featured-project,
.user-content .player .title,
.user-content .player .featured-project-heading {
  display: none !important;
}
#user-details {
  width: 661px !important;
  height: 158px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}
#bio span[data-content="prompt"],
#status span[data-content="prompt"] {
  position: relative;
  left: 0;
}
#activity-feed .activity-stream {
  height: 107px !important;
  overflow-x: hidden;
  overflow-y: scroll;
}
.activity-stream div {
  width: calc(100% - 24px);
}
#profile-box .inner {
  height: 140px !important;
  padding-bottom: 6px !important;
}
#profile-box .doing {
  width: 281px;
  height: 156px;
  box-sizing: border-box;
  overflow: hidden;
}
.profile-details span {
  display: inline !important;
  /* 2023: I'm not sure why !important is needed here */
}
#lfp-embed {
  position: absolute;
  bottom: 250px;
  right: 20px;
}
#lfp-change-featured {
  display: none !important;
}
#bio,
#bio-readonly {
  margin-bottom: 0;
}
#bio-readonly,
#status-readonly {
  width: 297px;
}
#profile-box .about .scrollbar {
  width: 12px;
}
.sa-user-id {
  color: white;
}
.location {
  word-break: break-all;
  width: 600px;
}

